# trident

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build-app.sh  flake.nix  lima-nix-dev.yaml  nixos-test.nix  result  test-linux.sh
.fast-memory/: fast-memory.db
.github/workflows/: linux-build.yml  nix-build.yml  pure-nix-build.yml
docs/: compass_artifact_wf-f832b9e7-03bc-4aae-a38d-2f83a9a3fcfb_text_markdown.md  implementation-plan.md  menu-bar-app-strategy.md  native_ui_plan.md  plan_linux.md  plan_windows.md  tdd-testing-strategy.md  testing-linux.md
keymaps/: default.json
src/: app.rs  config.rs  default_config.toml  fuzzy.rs  hotkey.rs  main.rs  menubar.rs  native_app.rs  objc2_hotkey.rs  tray.rs
src/native_ui/: host_list.rs  mod.rs  search_input.rs  window.rs
src/platform/: mod.rs
src/platform/macos/: config.rs  hotkey.rs  launcher.rs  mod.rs
src/platform/unix/: config.rs  hotkey.rs  launcher.rs  mod.rs
src/ssh/: launcher.rs  mod.rs  parser.rs
src/ui/: host_list.rs  mod.rs  search_input.rs
