[package]
name = "trident"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
gpui = { git = "https://github.com/zed-industries/zed" }

[target.'cfg(target_os = "macos")'.dependencies]
tao = { version = "0.16", features = ["tray"] }

[dev-dependencies]
tempfile = "3.0"
