[package]
name = "trident"
version = "0.1.0"
edition = "2024"
description = "SSH Connection Launcher for macOS"
license = "MIT"

[package.metadata.bundle]
name = "Trident"
identifier = "com.trident.ssh-launcher"
category = "DeveloperTool"
short_description = "SSH Connection Launcher"
long_description = "A macOS menubar application for quickly launching SSH connections with fuzzy search over known hosts"
icon = ["assets/trident-icon-32.png"]
version = "0.1.0"
osx_minimum_system_version = "12.0"
osx_url_schemes = []

# Additional plist entries for proper menubar app behavior
[package.metadata.bundle.osx_plist_entries]
LSUIElement = true
NSHighResolutionCapable = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
anyhow = "1.0"
gpui = { git = "https://github.com/zed-industries/zed" }
image = "0.25"
tray-icon = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSStatusBar", "NSStatusItem", "NSImage", "NSMenu", "NSMenuItem", "NSApplication", "NSEvent", "NSWorkspace", "NSWindow", "NSTextField", "NSTableView", "NSView", "NSScrollView", "NSControl", "NSResponder", "NSText", "NSAppearance", "block2"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSData", "NSString", "NSIndexSet"] }
objc2-core-foundation = "0.3"
block2 = "0.6"

[dev-dependencies]
tempfile = "3.0"
